--- a/.env
+++ b/.env
@@ -8,12 +8,14 @@ DB_URL='mongodb+srv://Nidhi:ncM5ae9EfRdn1xzB@newsportal.87vhqpg.mongodb.net/News
 
 # DB_URL='mongodb://localhost:27017/Newsportal'
 
-CLOUD_NAME=dzbbadosd
+CLOUD_NAME=digjcreha
+# dzbbadosd
 
-CLOUD_API_KEY=225673153741996
+CLOUD_API_KEY=422796786649442
+# 225673153741996
+CLOUD_SECRET_KEY=mkOOCL4GPMgbyD2f3l95iHecPG8
 
-CLOUD_SECRET_KEY=LDrSVpwrccW5WR--yqr7Tvljyac
-
+# LDrSVpwrccW5WR--yqr7Tvljyac
 # REDIS_URL=redis://default:AeC-AAIjcDFjZDc1OWExZTdmYjk0NTJiYjU4YzFjNGNjMTdjNDg1NXAxMA@integral-mammal-57534.upstash.io:6379
 
 REDIS_URL=redis://default:AeC-AAIjcDFjZDc1OWExZTdmYjk0NTJiYjU4YzFjNGNjMTdjNDg1NXAxMA@integral-mammal-57534.upstash.io:6379
